Correct Header Z-index

--- a/crowpad-frontend/src/components/header/Header.scss
+++ b/crowpad-frontend/src/components/header/Header.scss
@@ -1,7 +1,7 @@
 .crow-header {
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
